Add new config files that are less conservative and allow for more delay

--- a/tex/al_dente.tex
+++ b/tex/al_dente.tex
@@ -144,21 +144,7 @@ Stochastic loss prob. & $0\%$ & constant \\
 \end{frame}
 
 \begin{frame}{Preliminary results -- Comparison}
-\centering
-\begin{tabular}{rll}
-\toprule
-Parameter & Value & Distribution \\
-\midrule
-Two-way propagation delay & $150\,$ms & constant \\
-Bottleneck bandwidth & $15\,$Mbit/s & constant \\
-Number of senders & $8$ & constant \\
-Flow length & $100\,$kB & exponential \\
-Time between flows & $0.5\,$s & exponential \\
-Simulation duration & $100\,$s & constant \\
-Buffer size & $1000$ packets & constant \\
-Stochastic loss prob. & $0\%$ & constant \\
-\bottomrule
-\end{tabular}
+Stuff goes here!
 \end{frame}
 
 \newcommand{\nodedistance}{2}
