--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage[inline]{enumitem}
 
 %\usepackage{todonotes}
 \usepackage{svg}
@@ -323,7 +324,7 @@ is the actor loss that we try to minimize.
 
 \end{tikzpicture}
 
-\caption{A petri net describing the congestion control mechanism. We start with one token in the state \textit{Open congestion window}, which means that initially we can send one packet. We start with another token in the state \textit{Received feedback}, which means that we can take an action right in the beginning. The concept is the following: If there is at least one token in the \textit{Open congestion window}, send a packet. The acknowledgement (or timeout if the packet gets lost) for the packet is received by the \textit{Open congestion window}, meaning that when we get an ACK we can send another packet (The \textit{Open congestion window} signifies the congestion window minus the packets that are currently unacknowledged.). Furthermore the state \textit{Received feedback} receives each ACK/timeout and takes an action. \textit{Take action} adds \textit{a} tokens to the \textit{Open congestion window}, where $a$ is a real number (possibly also negative); thus in each state there can also be a real number of tokens (e.g.~ 2.34 tokens are possible in the \textit{Open congestion window}). However, we define that the congestion window can never be smaller than 1. \todo{Draw as 3 times 3 square}}
+\caption{A petri net describing the congestion control mechanism. We start with one token in the state \textit{Open congestion window}, which means that initially we can send one packet. We start with another token in the state \textit{Received feedback}, which means that we can take an action right in the beginning. The concept is the following: If there is at least one token in the \textit{Open congestion window}, send a packet. The acknowledgement (or timeout if the packet gets lost) for the packet is received by the \textit{Open congestion window}, meaning that when we get an ACK we can send another packet (The \textit{Open congestion window} signifies the congestion window minus the packets that are currently unacknowledged.). Furthermore the state \textit{Received feedback} receives each ACK/timeout and takes an action. \textit{Take action} adds \textit{a} tokens to the \textit{Open congestion window}, where $a$ is a real number (possibly also negative); thus in each state there can also be a real number of tokens (e.g.~ 2.34 tokens are possible in the \textit{Open congestion window}). However, we define that the congestion window can never be smaller than 1.}
 \label{fig:petri}
 \end{figure}
 
@@ -398,30 +399,87 @@ l_{\text{a},t} =& -\log \left( \pi \left( a_t \given s_t ; \theta_\text{a} \righ
 
 \end{enumerate}
 
+%\subsection{Convergence}
+%
+%We use 
+%
+%\begin{align*}
+%\text{Reward} = \log(\text{throughput}) - \delta\text{delay}
+%\end{align*}
+%
+%as our metric of reward, where $\delta$ is a parameter that allows us to change the importance of the throughput vs.~the delay. We take the logarithm of the throughput to ensure that flows which have small throughput have a higher incentive to increase it as flows which already have a large one (because the derivative of the logarithm decreases with increasing value). We take minus the delay to punish inducing delay. We do not take the logarithm because we think that it is equally bad if a sender behind a satellite connection with a minimum RTT of $500\,$ms adds $1\,$ms of delay as if a sender connected using Ethernet with a minimum RTT of $10\,$ms adds $1\,$ms of delay. 
+%
+%There are two conditions that we have to take into account to ensure convergence:
+%\begin{enumerate}
+%\item \begin{align*}
+%\left(\frac{\partial}{\partial w}\text{throughput}\right)\left(1\right) > \left(\frac{\partial}{\partial w}\delta\text{delay}\right)\left(1\right)
+%\end{align*}
+%\item \begin{align*}
+%\frac{\partial}{\partial w}\left(\delta\right)
+%\end{align*}
+%\end{enumerate}
+%
+%\todo{Finish second constraint for convergence.}
+%
+%\todo{Add figure to visually explain that}
+
 \subsection{Convergence}
 
-We use 
+Assume we have $N$ senders, each with its specific baseline delay (this encompasses all delays excluding only the queueing delay) $d_i$. Each sender keeps a congestion window $b_i$. The link speed at the bottleneck is designated as $c$. 
+
+%We define the excessive window as 
+%\begin{align*}
+%b_\text{excess} = \max\left( \left( \sum_{j=1}^N \frac{b_j}{d_j} \right) - c, 0 \right)
+%\end{align*}
+%and the queueing delay as 
+%\begin{align*}
+%d_q = \frac{b_\text{excess}}{c}.
+%\end{align*}
+
+With $b = (b_i)$ we observe the following relation:
 
 \begin{align*}
-\text{Reward} = \log(\text{throughput}) - \delta\text{delay}
+c = \sum_{j=1}^N \frac{b_j}{d_j + d_q(b)}
 \end{align*}
 
-as our metric of reward, where $\delta$ is a parameter that allows us to change the importance of the throughput vs.~the delay. We take the logarithm of the throughput to ensure that flows which have small throughput have a higher incentive to increase it as flows which already have a large one (because the derivative of the logarithm decreases with increasing value). We take minus the delay to punish inducing delay. We do not take the logarithm because we think that it is equally bad if a sender behind a satellite connection with a minimum RTT of $500\,$ms adds $1\,$ms of delay as if a sender connected using Ethernet with a minimum RTT of $10\,$ms adds $1\,$ms of delay. 
-
-There are two conditions that we have to take into account to ensure convergence:
-\begin{enumerate}
-\item \begin{align*}
-\left(\frac{\partial}{\partial w}\text{throughput}\right)\left(1\right) > \left(\frac{\partial}{\partial w}\delta\text{delay}\right)\left(1\right)
+Then we define the utility function for each sender $i$ as
+\begin{align*}
+V_i(b) \coloneqq \begin{cases}
+\log\left(\frac{b_i}{d_i}\right) - \delta_i d_i & \text{if } \sum_{j=1}^N \frac{b_i}{d_i} \leq c\\
+\log\left(\frac{b_i}{d_i + d_q(b)}\right) - \delta_i (d_i + d_q(b)) & \text{otherwise}
+\end{cases}
 \end{align*}
-\item \begin{align*}
-\frac{\partial}{\partial w}\left(\delta\right)
+
+\begin{align*}
+&\log\left(\frac{b_i}{d_i + d_q}\right) - \delta_i (d_i + d_q) \\
+=& \log\left(b_i\right) - \log\left(d_i + d_q\right) - \delta_i (d_i + d_q)
 \end{align*}
-\end{enumerate}
 
-\todo{Finish second constraint for convergence.}
+\begin{align*}
+\frac{\partial V_i}{\partial b_i} = \begin{cases}
+\frac{1}{b_i} & \text{if } \sum_{j=1}^N \frac{b_i}{d_i} \leq c\\
+\frac{1}{b_i} - \frac{\partial d_q}{\partial b_i}\left(b_i\right)\frac{1}{d_i+d_q\left(b_i\right)} - \delta\frac{\partial d_q}{b_i}\left(b_i\right) & \text{otherwise}
+\end{cases}
+\end{align*}
 
-\todo{Add figure to visually explain that}
- 
+%\begin{align*}
+%G(b) = \begin{pmatrix}
+%-\frac{1}{b_1^2} & & \\
+%& \ddots & \\
+%& & -\frac{1}{b_N^2}
+%\end{pmatrix} \text{if } \text{if } \sum_{j=1}^N \frac{b_i}{d_i} \leq c
+%\end{align*}
+
+To show diagonal strict concavity we have to show that d.s.c.~is fulfilled \begin{enumerate*} \item for two distinct points lying in $\sum_{j=1}^N \frac{b_i}{d_i} \leq c$ \item for two distinct points lying in $\sum_{j=1}^N \frac{b_i}{d_i} > c$ and \item when one point is in one part of the function and the other in the other one\end{enumerate*}.
+
+\todo{Insert what d.s.c~actually is and quote Altman's paper}
+
+%\begin{enumerate}
+%\item (b^1 - 
+%\item
+%\item
+%\end{enumerate}
+
 \section{Results}
 
 We train on the following scenario:
