--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -6,3 +6,21 @@
 	year = {2016},
 	pages = {1928--1937}
 }
+
+@inproceedings{winstein_tcp_2013,
+	title = {Tcp ex machina: {Computer}-generated congestion control},
+	volume = {43},
+	booktitle = {{ACM} {SIGCOMM} {Computer} {Communication} {Review}},
+	publisher = {ACM},
+	author = {Winstein, Keith and Balakrishnan, Hari},
+	year = {2013},
+	pages = {123--134}
+}
+
+@inproceedings{dong_pcc:_2015,
+	title = {{PCC}: {Re}-architecting {Congestion} {Control} for {Consistent} {High} {Performance}.},
+	booktitle = {{NSDI}},
+	author = {Dong, Mo and Li, Qingxi and Zarchy, Doron and Godfrey, Philip Brighten and Schapira, Michael},
+	year = {2015},
+	pages = {395--408}
+}
