--- a/tex/al_dente.tex
+++ b/tex/al_dente.tex
@@ -148,150 +148,16 @@ Stuff goes here!
 
 \end{frame}
 
-\newcommand{\nodedistance}{2}
-\newcommand{\nd}[1]{\numexpr #1 * \nodedistance \relax}
 \begin{frame}{Petri net}
 
-\centering
-\begin{tikzpicture}[node distance=\nodedistance,>=stealth',bend angle=45,auto]
+\input{petri_net.tex}
 
-  \tikzstyle{place}=[circle,thick,draw=blue!75,fill=blue!20,minimum size=6mm]
-  \tikzstyle{transition}=[rectangle,thick,draw=black!75,
-  			  fill=black!20,minimum size=4mm]
-
-%  \tikzstyle{every label}=[blue!75]
-
-  \begin{scope}
-    \node [place,tokens=1] (s1) at (\nd{0}, \nd{1}) [label={[align=center]left:Receive\\ feedback}] {};
-    \node [place] (s2) at (\nd{1}, \nd{2}) [label={[align=center]above:Received\\ ACKs}] {};
-    \node [place] (s3) at (\nd{2}, \nd{1}) [label={[align=center]right:Packets\\ in the\\ network}] {};
-    \node [place] (s4) at (\nd{1}, \nd{0}) [label={[align=center]below:Open congestion\\ window (cwnd)}] {};      
-
-    \node [transition] (e1) at (\nd{0}, \nd{0}) [label=left:Take action] {}
-      edge [post] node {$a$}(s4)
-      edge [pre] node {1} (s1);    
-     
-    \node [transition] (e2) at (\nd{2}, \nd{0}) [label={[align=center]right:Send\\ packet}] {}
-      edge [pre] node {1} (s4)
-      edge [post] node {1} (s3);
-
-    \node [transition] (e3) at (\nd{2}, \nd{2}) [label={[align=center]right:Receive\\ ACK}] {}
-      edge [pre] node {1} (s3)
-      edge [post] node {1} (s2);
-
-    \node [transition] (e4) at (\nd{1}, \nd{1}) [label={[align=center]left:Update\\open\\cwnd}] {}
-      edge [pre] node {1} (s2)
-      edge [post] node {1} (s4);
-      
-    \node [transition] (e5) at (\nd{0}, \nd{2}) [label={[align=center]left:Received\\ feedback}] {}
-      edge [pre] node {1} (s2)
-      edge [post] node {1} (s1);
-
-  \end{scope}
-
-\end{tikzpicture}
 \end{frame}
-
-\newcommand{\nnfontsize}{\tiny}
 
 \begin{frame}{Neural Network}
 
-\centering
-\begin{tikzpicture}[node distance=1.2cm, >=stealth',bend angle=45,auto]
+\input{neural_network.tex}
 
-  \tikzstyle{place}=[circle,thick,draw=blue!75,fill=blue!20,minimum size=6mm]
-  \tikzstyle{input place}=[circle,thick,draw=olive!75,fill=olive!20,minimum size=6mm]
-  \tikzstyle{output place}=[circle,thick,draw=magenta!75,fill=magenta!20,minimum size=6mm]
-   \tikzstyle{lstm place}=[circle,thick,draw=red!75,fill=red!20,minimum size=6mm]
-   \tikzstyle{softplus place}=[circle,thick,draw=green!75,fill=green!20,minimum size=6mm]
-
-  \tikzstyle{transition}=[rectangle,thick,draw=black!75,
-  			  fill=black!20,minimum size=4mm]
-
-%  \tikzstyle{every label}=[blue!75]
-
-  \begin{scope}
-    \node [input place] (s1) [label={[align=center]left:\nnfontsize State (12)}] {};
-    \node [place] (s2) [above right of=s1, label={[align=center]above:\nnfontsize Linear}] {};
-    
-  \path[->] (s1) edge node {} (s2);
-    
-    \node [lstm place] (s3) [right of=s2, label={[align=center]below:\nnfontsize LSTM (32)}] {};
-
-  \path[->] (s2) edge node {} (s3); 
-  \path[->] (s3) edge [loop above] node {} (s3);   
-   
-    \node [lstm place] (s4) [right of=s3, label={[align=center]below:\nnfontsize LSTM (32)}] {};    
-    
-  \path[->] (s3) edge node {} (s4);
-  \path[->] (s4) edge [loop above] node {} (s4);
-    
-    \node [softplus place] (s7) [right of=s4, label={[align=center]below:{\nnfontsize Softplus}}] {};
-    
-  \path[->] (s4) edge node {} (s7);
-    
-    \node [output place] (s8) [right of=s7, label={[align=center]below:\nnfontsize $\sigma$~(1)}] {};    
-
-  \path[->] (s7) edge node {} (s8);
-
-    \node [place] (s5) [above of=s7, label={[align=center]above:\nnfontsize Linear}] {};
-    
-  \path[->] (s4) edge node {} (s5);
-
-    \node [output place] (s6) [right of=s5, label={[align=center]above:\nnfontsize $\mu$ (1)}] {};    
-    
-  \path[->] (s5) edge node {} (s6);    
-    
-    \node [place] (s10) [below right of=s1, label={[align=center]below:\nnfontsize Linear}] {};
-    
-  \path[->] (s1) edge node {} (s10);
-
-    
-    \node [lstm place] (s11) [right of=s10, label={[align=center]above:\nnfontsize LSTM (32)}] {};
-    
-  \path[->] (s10) edge node {} (s11);
-  \path[->] (s11) edge [loop below] node {} (s11);
-
-    \node [lstm place] (s12) [right of=s11, label={[align=center]above:\nnfontsize LSTM (32)}] {};
-    
-  \path[->] (s11) edge node {} (s12);
-  \path[->] (s12) edge [loop below] node {} (s12);
-    
-    \node [softplus place] (s13) [right of=s12, label={[align=center]above:\nnfontsize Softplus}] {};
-    
-  \path[->] (s12) edge node {} (s13);
-
-    \node [output place] (s17) [right of=s13, label={[align=center]above:\nnfontsize $V_\text{packets}$ (1)}] {};
-    
-  \path[->] (s13) edge node {} (s17);
-    
-    \node [softplus place] (s15) [below of=s13, label={[align=center]above:\nnfontsize Softplus}] {};
-    
-  \path[->] (s12) edge node {} (s15);
-
-    \node [output place] (s19) [right of=s15, label={[align=center]above:\nnfontsize $V_\text{delay}$ (1)}] {};  
-    
-  \path[->] (s15) edge node {} (s19);    
-    
-    \node [softplus place] (s16) [below of=s15, label={[align=center]above:\nnfontsize Softplus}] {};
-    
-  \path[->] (s12) edge node {} (s16);    
-    
-    \node [output place] (s20) [right of=s16, label={[align=center]above:\nnfontsize $V_\text{lost}$ (1)}] {};    
-
-  \path[->] (s16) edge node {} (s20);    
-    
-    \node [softplus place] (s14) [below of=s16, label={[align=center]above:\nnfontsize Softplus}] {};
-    
-  \path[->] (s12) edge node {} (s14);
-    
-    \node [output place] (s21) [right of=s14, label={[align=center]above:\nnfontsize $V_\text{duration}$ (1)}] {};   
-    
-  \path[->] (s14) edge node {} (s21); 
-
-  \end{scope}
-
-\end{tikzpicture}
 \end{frame}
 
 \begin{frame}{Reward 1}
