Changes to the paper

--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -357,7 +357,7 @@ The overall structure of the neural network for both the value and the actor net
 
 \input{neural_network.tex}
 
-\caption{An overview of the complete neural network being used. Ocher stands for the input, blue for linear layers, red for LSTM layers, green for linear layers with a softplus activation function and purple for the outputs of the neural network. The numbers in parentheses next to each label stand  for the number of neurons being used in that layer.}
+\caption{An overview of the complete neural network being used. Ocher stands for the input, blue for linear layers, red for LSTM layers, green for linear layers with a softplus activation function and purple for the outputs of the neural network. The numbers in parentheses next to each label stand for the number of width of that layer (i.e.~the number of neurons except for the inputs and outputs).}
 \label{fig:neural_network}
 \end{figure}
 
